--- a/CSS/aboutus.css
+++ b/CSS/aboutus.css
@@ -37,6 +37,8 @@ div.body {
   font-family: 標楷體;
   color: #003F88;
   letter-spacing: 0.5px;
+  float: left;
+  padding-top: 10px;
 }
 
 
@@ -49,7 +51,7 @@ div.body {
 
 .h-home {
   position: absolute;
-  top: 200px;
+  top: 190px;
 }
 
 .hhhome {
@@ -60,6 +62,7 @@ div.body {
   justify-content: center;
   align-items: center;
 }
+
 
 .hhhome>img {
   width: 100%;
