--- a/CSS/FOOD-3.css
+++ b/CSS/FOOD-3.css
@@ -96,3 +96,20 @@ body {
     color: #E9ECEF;
 
   }
+  .cnn {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 100px 10px;
+  }
+  
+  .c-i-a>img {
+    width:80px;
+    height: 80px;
+  }
+  
+  .c-i-a>img:hover {
+    width: 100px;
+    height: 100px;
+    transition: .3s;
+  }
