--- a/CSS/title.css
+++ b/CSS/title.css
@@ -15,8 +15,10 @@ body {
 
 .word {
   font-size: 20px;
-  color: #e1eef6;
+  color: #4EA8DE;
+  text-shadow: 0px 2px 0px #6D597A;
   font-style: italic;
+  font-weight: bold;
   letter-spacing: 2px;
   word-spacing: 2px;
   padding: 60px 0 0 0;
@@ -24,8 +26,7 @@ body {
   margin-bottom: 2px;
 }
 
-div.inner {
-  background: url(https://lh3.googleusercontent.com/_978i5dI1Io1RQRjNRHTm6uBQlS4ZL0sWCiJcwhxvmZKxz0LYL-NEKFeyt8UeUWhfF4Cz2dIXRBwCKwshAvCLGmR4v03Hu99Z_6kytEf7jFz9zhsJbIoHXeLAHY3fU30EIMgqA3eP7UbZaQ_QsHcmfHUi8xHni3D9ttRuub9g6LclHjVE_55O3UKXxbjDF8ByISOGMQ1FuObwhE8TbgFxz3NLmtT_ObG3jiSnqFw1NfQp9gTYSvDxcPa3qkHuyBh6qIMts9hw0Qr3QBIfkjGMXa-Ly-mRboak7yNKS2SOBSrsbM_4K4zIiqepWlv4xzuEepxkF0L4X6nx-Z8bU5Q_mou5uXpw-QLNlp3ernMX15lGWx55gd-DUoSNM2k7b2gpCJFkL0ZkPeuKYbQ1EyqlGhAOUz9ZXZrKUasfYinIzDpPpDebSqFj3amg_0hKhGyhXimFPfi4Ds9uQa2AL3Al9GL2C4f27PPxReZM7gdYA5s6qwM90CLFu4Aqwh8ckNJyzoyytuFjT-mIV6Q02feqg8igTyzt4BdO4jPlDwS8yehDHcKOR4HlGBVtHVnnbl4-oVbGqv-z5E62L1Mk8m-AAZ-R_4t4uDnerYiN-h0Nzwj2_en9duz3J6gZEagrzeyc39zKnEiG9AsgFL8N9elVLnnbiTjLoYiJJnng2g45zdaEW1sRHW6ZkOP4MjUeGtn3zwxko4MW1J3ZvLlZtEErnpQ=w600-h391-no?authuser=0);
+.inner {
   padding: 40px 0;
   text-decoration: none;
   width: 100%;
@@ -83,10 +84,10 @@ div.inner {
   width: 100%;
   margin-left: 0px;
   margin-right: 0px;
-  background-color: #e1eef6;
+  background-color: #274555;
   font-size: 13px;
   text-align: center;
-  color: #272625;
+  color: #E9ECEF;
   padding-top: 10px;
   padding-bottom: 10px;
 }
@@ -151,6 +152,6 @@ div.cnn {
   padding: 50px 0;
   font-size: 20px;
   font-variant: initial;
-  color: #e1eef6;
+  color: #7678ED;
   padding-top: 10px;
 }
