--- a/CSS/FOOD-2.css
+++ b/CSS/FOOD-2.css
@@ -93,3 +93,47 @@ body {
     color: #E9ECEF;
 
   }
+
+  .wei-grids-wall {
+    display: flex;
+    flex-direction: row;
+    position:relative;
+    margin-top: 10vh;
+  }
+  .wei-grid-special0 {
+    position:relative;
+    left: 0%;
+    top: 0%;
+    width: 300px;
+    height: 300px;
+    border:0%;
+    margin:10px 10px 10px 10px;
+    overflow: hidden;
+    transition: box-shadow 500ms;
+  }
+  
+  .wei-image5 {
+    transition: transform 1s ease;
+    width: 100%;
+    height: 100%;
+  }
+  .wei-grid-special0:hover {
+    box-shadow: 0 5px 30px rgba(0, 0, 0, 0.8);
+  }
+  .cnn {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 100px 10px;
+  }
+  
+  .c-i-a>img {
+    width:80px;
+    height: 80px;
+  }
+  
+  .c-i-a>img:hover {
+    width: 100px;
+    height: 100px;
+    transition: .3s;
+  }
