--- a/CSS/food.css
+++ b/CSS/food.css
@@ -10,7 +10,30 @@ body {
   position: relative;
 }
 
+span {
+  font-size: 30px;
+}
+
 .inner {
+  padding: 40px 0;
+  text-decoration: none;
+  width: 100%;
+  height: 50;
+  font-size: 35px;
+  font-weight: bold;
+  font-family: 標楷體;
+  text-shadow: 0px 3px 0px #9DC8C8,
+    0px 14px 10px rgba(0, 0, 0, 0.15),
+    0px 24px 2px rgba(0, 0, 0, 0.1),
+    0px 34px 30px rgba(0, 0, 0, 0.1);
+  font-style: normal;
+  color: #3F37C9;
+  letter-spacing: 1px;
+  text-align: center;
+  margin: 0%;
+}
+
+div.inner {
   padding: 40px 0;
   text-decoration: none;
   width: 100%;
@@ -29,37 +52,15 @@ body {
   margin: 0%;
 }
 
-div.inner {
-  width: 100%;
-  height: 1300px;
-  font-size: 30px;
-  font-weight: bold;
-  font-family: 標楷體;
-  text-shadow: 0px 3px 0px rgba(0, 0, 0, 0.15) 0px 14px 10px rgba(0, 0, 0, 0.15),
-    0px 24px 2px rgba(0, 0, 0, 0.1),
-    0px 34px 30px rgba(0, 0, 0, 0.1);
-  font-style: normal;
-  color: black;
-  letter-spacing: 1px;
-  text-align: center;
-  padding: 10p;
-}
-
-.top {
-  padding-top: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
 .h-home {
   position: absolute;
-  top: 200px;
+  bottom: 200px;
 }
 
 .hhhome {
-  max-width: 100px;
-  max-width: 100px;
+  max-width: 80px;
+  max-width: 80px;
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -71,18 +72,12 @@ div.inner {
 }
 
 #footer {
-
+  position: absolute;
   width: 100%;
-  height: 100px;
-  width: 100%;
-  margin-left: 0px;
-  margin-right: 0px;
   background-color: #274555;
   font-size: 13px;
   text-align: center;
   color: #E9ECEF;
-  padding-bottom: 10px;
-
 }
 
 #pagetop {
@@ -97,9 +92,9 @@ div.inner {
   color: black;
   letter-spacing: 1px;
   text-align: center;
-  padding: 30%;
-  padding-bottom: 5%;
-
+  padding: 5px;
+  width: 100%;
+  height: 100px;
 }
 
 img {
@@ -108,12 +103,21 @@ img {
   padding: 10px;
 }
 
+.title {
+
+  color: #274555;
+  font-size: 20px;
+  margin: 0%;
+}
+
 .tb {
   position: absolute;
   left: 10px;
   right: 10px;
-  top: 150px;
-  bottom: unset;
+  top: 130px;
+  padding: 30px;
+  font-size: 20px;
+
 }
 
 .ss {
@@ -124,13 +128,71 @@ img {
 
 }
 
+.cnn {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 100px 10px;
+}
+
+.c-i-a>img {
+  width: 80px;
+  height: 80px;
+}
+
+.c-i-a>img:hover {
+  width: 100px;
+  height: 100px;
+  transition: .3s;
+}
+
 .small {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 50px 0;
-  font-size: 20px;
+  padding: 3px;
   font-variant: initial;
-  color: #e1eef6;
-  padding-top: 10px;
+  color: #E9ECEF;
+  background-color: #274555;
+}
+
+
+.wei-grids-wall {
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  margin-top: 10vh;
+}
+
+.wei-grid-special0 {
+  position: relative;
+  left: 0%;
+  top: 0%;
+  width: 300px;
+  height: 300px;
+  border: 0%;
+  margin: 10px 10px 10px 10px;
+  overflow: hidden;
+  transition: box-shadow 500ms;
+}
+
+.wei-image5 {
+  transition: transform 1s ease;
+  width: 100%;
+  height: 100%;
+}
+
+.wei-grid-special0:hover {
+  box-shadow: 0 5px 30px rgba(0, 0, 0, 0.8);
+}
+
+a:hover {
+  border-top-color: #28597a;
+  background: #28597a;
+  color: #ccc;
+}
+
+a:active {
+  border-top-color: #1b435e;
+  background: #1b435e;
 }
